--- a/index2.html
+++ b/index2.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <!-- this code under the head will reflect in the tab section of web page -->
-    <meta charset="UTF-8" />
-    <meta name="author" content="kalyan" />
-    <meta name="Description" content="I am learing html as soon as possible for me" />
-    <title>FirstPageByMe</title>
-    <link rel="icon" href="html5.png" type="image/x-icon" />
-    <link rel="stylesheet" href="style2.css" type="text/css" />
-  </head>
+<head>
+  <!-- this code under the head will reflect in the tab section of web page -->
+  <meta charset="UTF-8" />
+  <meta name="author" content="kalyan" />
+  <meta name="Description" content="I am learing html as soon as possible for me" />
+  <title>FirstPageByMe</title>
+  <link rel="icon" href="html5.png" type="image/x-icon" />
+  <link rel="stylesheet" href="style2.css" type="text/css" />
+</head>
 
-  <body>
-    <h1>Hi There, Heading</h1>
-    <!-- this is the only heading for the entire page with h1 tag -->
-    <hr />
-    <!-- this hr tag is used for horizontal line -->
+<body>
+  <h1>Hi There, Heading</h1>
+  <nav>
+    <!-- 'nav' is to navigate to the section in the web page -->
+    <ul>
+      <li>
+        <a href="#html">Html Basics</a> 
+        <!-- Here '#' used to refer to the key used in the section part -->
+      </li>
+      <li>
+        <a href="#sub">Third sub heading</a>
+      </li>
+    </ul>
+  </nav>
+
+  <!-- this is the only heading for the entire page with h1 tag -->
+  <hr />
+  <!-- this hr tag is used for horizontal line -->
+
+  <section id="html">
+    <!-- 'section ' will be created to call through #link to navigate with 'id' -->
     <h2>Html Basics, sub heading</h2>
     <p>This is the pargraph like <em> description for the sub heading </em></p>
     <!-- Here 'em'in line level tag is used for emphasizing the line it means some part of text can be tilted -->
@@ -24,6 +40,8 @@
     <br />
     anything in br will in seperate line
     <hr />
+  </section>
+  <section id="sub">
     <h3>Sub heading with more smaller</h3>
     <p>&nbsp;&nbsp;same para same <strong>Before</strong></p>
     <!-- Here '&nbsp;' is used for space, how many you give that many spaces  -->
@@ -33,7 +51,7 @@
     <abbr title="Malla Reddy College of Engineering"> <a href="https://mrce.in/">MRCE</a></abbr>
     <br> This link will take you to my college ,This kind of link is absolute address
     <!-- This 'abbr' tag will highlites the abbrevation and 'title' is used to know the full form -->
-    <p>This the example addres from the net</p>
+    <p>This is the example address from the net</p>
     <!-- The 'address tag identify the addrss and make it look like the using 'em' tag ' -->
     <address>
       U.S. Embassy New Delhi <br />
@@ -42,40 +60,41 @@
       Phone: 011-91-11-2419-8000 <br />
       Fax: 011-91-11-2419-0017 <br />
     </address>
-    <!-- Use the key 'Ctrl + U' for seeing the source of the html of web page -->
-    <hr />
-    <!-- using 'li' tag which is list  -->
-    <!-- and makeing them in 'ol' tag ordered list, without 'ol' all the list have dot at the beginnig.-->
-    <ol>
-      <li>.learing html as soon as possible</li>
-      <li>.making sure every point should be covered</li>
-    </ol>
-    <hr />
-    <dl>
-      <!-- Here 'dl' tag is description list different from ordered list -->
-      <dt>
-        New topic<!-- This 'dt' tag is description term act as side heading for a point -->
-      </dt>
-      <dd>
-        About the description topic to the paragram or point wise statements
-      </dd>
-      <!-- This 'dd' description details tag add details to the above term -->
-      <dt>Day</dt>
-      <dd>today is monday</dd>
-    </dl>
-    <hr />
-    <!--  chapte 5 - adding links -->
+  </section>
+  <!-- Use the key 'Ctrl + U' for seeing the source of the html of web page -->
+  <hr />
+  <!-- using 'li' tag which is list  -->
+  <!-- and makeing them in 'ol' tag ordered list, without 'ol' all the list have dot at the beginnig.-->
+  <ol>
+    <li>.learing html as soon as possible</li>
+    <li>.making sure every point should be covered</li>
+  </ol>
+  <hr />
+  <dl>
+    <!-- Here 'dl' tag is description list different from ordered list -->
+    <dt>
+      New topic<!-- This 'dt' tag is description term act as side heading for a point -->
+    </dt>
+    <dd>
+      About the description topic to the paragram or point wise statements
+    </dd>
+    <!-- This 'dd' description details tag add details to the above term -->
+    <dt>Day</dt>
+    <dd>today is monday</dd>
+  </dl>
+  <hr />
+  <!--  chapte 5 - adding links -->
 
-    <!-- link can be added the 'abbr' tag for the acronym with anchor tag 'a' -->
-    <!-- anchor tag like this '<a href=""> link_word </a> ' -->
+  <!-- link can be added the 'abbr' tag for the acronym with anchor tag 'a' -->
+  <!-- anchor tag like this '<a href=""> link_word </a> ' -->
 
-    &lt; &lt; &lt; &copy; <strong><a href="about.html">Kalyan</a></strong> &gt; &gt; &gt;
-    <!-- This kind of self page link is relative address -->
-
-
-
+  &lt; &lt; &lt; &copy; <strong><a href="about.html">Kalyan</a></strong> &gt; &gt; &gt;
+  <!-- This kind of self page link is relative address -->
 
 
-  </body>
+
+
+
+</body>
 
 </html>
