addred back to top section navigaton and css for mouse hover and word color

--- a/index2.html
+++ b/index2.html
@@ -90,7 +90,9 @@
 
   &lt; &lt; &lt; &copy; <strong><a href="about.html">Kalyan</a></strong> &gt; &gt; &gt;
   <!-- This kind of self page link is relative address -->
-
+  <p>
+    <a href="#">Back to top</a>
+  </p>
 
 
 
