Learnt Image, link , tables

--- a/about.html
+++ b/about.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- this code under the head will reflect in the tab section of web page -->
-    <meta charset="UTF-8" />
-    <meta name="author" content="kalyan" />
-    <meta
-      name="Description"
-      content="Hi, i'm kalyan this page is about me section"
-    />
-    <title>About me</title>
-    <link rel="icon" href="html5.png" type="image/x-icon" />
-    <link rel="stylesheet" href="style2.css" type="text/css" />
-  </head>
 
-  <body>
-    <h1>Hi there </h1>
-    <!-- this is the only heading for the entire page with h1 tag -->
-    <hr />
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse totam commodi voluptatibus quibusdam, porro id vel sunt culpa at odit nostrum ipsum, quae soluta tenetur maxime. Laborum natus maiores illo?</p>
-    <hr/>
-    
-    &lt; &lt; &lt; &copy; <strong><a href="about.html">Kalyan</a></strong> &gt; &gt; &gt;
+<head>
+  <!-- this code under the head will reflect in the tab section of web page -->
+  <meta charset="UTF-8" />
+  <meta name="author" content="kalyan" />
+  <meta name="Description" content="Hi, i'm kalyan this page is about me section" />
+  <title>About me</title>
+  <link rel="icon" href="html5.png" type="image/x-icon" />
+  <link rel="stylesheet" href="style2.css" type="text/css" />
+</head>
+
+<body>
+  <h1>Hi there </h1>
+  <!-- this is the only heading for the entire page with h1 tag -->
+  <hr />
+  <p>This is about me section. Here you get some informaton of me. You can find contact details.
+  </p>
+  <hr />
+  <ul>
+    <li>
+      Contact me through <a href="mailto:random@gmail.com">mail</a>
+    </li>
+    <!-- Here 'mailto:' is used to mail to correct address -->
+    <li>
+      Dail <a href="tel:+1234567890">Mobile phone</a>
+    </li>
+    <!-- Here 'tel:' for mobile number with country code -->
+    <li>
+      I can take you to <a href="https://google.com/" target="_blank">Google</a>
+      <!-- Here 'target=' for saperate tab for respective link -->
+    </li>
+  </ul>
+  &lt; &lt; &lt; &copy; <strong><a href="html5.png" download="">Kalyan<a></strong> &gt; &gt; &gt;
+  <!-- just used 'download' word to download a file  -->
+<p> <a href="/"></a>Back to Top</p>
 
 
 
 
 
+</body>
 
-  </body>
 </html>
