--- a/index2.html
+++ b/index2.html
@@ -3,97 +3,185 @@
 
 <head>
   <!-- this code under the head will reflect in the tab section of web page -->
-  <meta charset="UTF-8" />
-  <meta name="author" content="kalyan" />
-  <meta name="Description" content="I am learing html as soon as possible for me" />
+  <meta charset="UTF-8">
+  <meta name="author" content="kalyan">
+  <meta name="Description" content="I am learing html as soon as possible for me">
   <title>FirstPageByMe</title>
-  <link rel="icon" href="html5.png" type="image/x-icon" />
-  <link rel="stylesheet" href="style2.css" type="text/css" />
+  <link rel="icon" href="html5.png" type="image/x-icon">
+  <link rel="stylesheet" href="style2.css" type="text/css">
 </head>
+<!-- Every page has only single 'header' , 'main' , 'footer' , 'nav' -->
 
 <body>
-  <h1>Hi There, Heading</h1>
-  <nav>
-    <!-- 'nav' is to navigate to the section in the web page -->
-    <ul>
-      <li>
-        <a href="#html">Html Basics</a> 
-        <!-- Here '#' used to refer to the key used in the section part -->
-      </li>
-      <li>
-        <a href="#sub">Third sub heading</a>
-      </li>
-    </ul>
-  </nav>
+  <header>
+    <h1>Hi There, Heading</h1>
+    <nav aria-label="primary-nav">
+      <!-- 'nav' is to navigate to the section in the web page -->
+      <ul>
+        <li>
+          <a href="#html">Html Basics</a>
+          <!-- Here '#' used to refer to the key used in the section part -->
+        </li>
+        <li>
+          <a href="#sub">Third sub heading</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
   <!-- this is the only heading for the entire page with h1 tag -->
-  <hr />
+  <hr>
   <!-- this hr tag is used for horizontal line -->
+  <main>
+    <article id="html">
 
-  <section id="html">
-    <!-- 'section ' will be created to call through #link to navigate with 'id' -->
-    <h2>Html Basics, sub heading</h2>
-    <p>This is the pargraph like <em> description for the sub heading </em></p>
-    <!-- Here 'em'in line level tag is used for emphasizing the line it means some part of text can be tilted -->
-    <br />
-    use br for seperate line without using space .
-    <br />
-    anything in br will in seperate line
-    <hr />
-  </section>
-  <section id="sub">
-    <h3>Sub heading with more smaller</h3>
-    <p>&nbsp;&nbsp;same para same <strong>Before</strong></p>
-    <!-- Here '&nbsp;' is used for space, how many you give that many spaces  -->
-    <!-- Here the 'Strong' tag is used has in line level for making the text bold and bigger -->
-    <!-- '&' symbol is used for the ading the symbols link-->
-    <hr />
-    <abbr title="Malla Reddy College of Engineering"> <a href="https://mrce.in/">MRCE</a></abbr>
-    <br> This link will take you to my college ,This kind of link is absolute address
-    <!-- This 'abbr' tag will highlites the abbrevation and 'title' is used to know the full form -->
-    <p>This is the example address from the net</p>
-    <!-- The 'address tag identify the addrss and make it look like the using 'em' tag ' -->
-    <address>
-      U.S. Embassy New Delhi <br />
-      Shantipath, Chanakyapuri <br />
-      New Delhi - 110021 <br />
-      Phone: 011-91-11-2419-8000 <br />
-      Fax: 011-91-11-2419-0017 <br />
-    </address>
-  </section>
+      <!-- 'section ' will be created to call through #link to navigate with 'id' -->
+      <!-- 'article' can also be used -->
+      <h2>Html Basics, sub heading</h2>
+      <p>This is the pargraph like <em> description for the sub heading </em></p>
+      <!-- Here 'em'in line level tag is used for emphasizing the line it means some part of text can be tilted -->
+      <br>
+      use br for seperate line without using space .
+      <br>
+      anything in br will in seperate line
+      <p>
+        <code>&lt;h1&gt; HTMl5 &lt;/h1&gt;</code>
+      </p>
+      <ol>
+        <li>.learing html as soon as possible</li>
+        <li>.making sure every point should be covered</li>
+      </ol>
+      <figure>
+        <img src="img/HTML5_badge.png" alt="HTML logo" width="300" height="300"
+          title="Learnig HTML5 for improving web skills" loading="lazy">
+        <figcaption>
+          This is the logo of HTML5
+        </figcaption>
+      </figure>
+      <aside>
+        <!-- This code will add complementary text meaning or details . Just click the question for answer  -->
+        <details>
+          <!-- actually used for company policy , warranty information 'deatails' , 'summary' -->
+          <summary>Do you like <mark> Html?</mark></summary>
+          <p>Yes, i like Html </p>
+        </details>
+      </aside>
+      <hr>
+    </article>
+    <article id="sub">
+      <h3>COllege Address</h3>
+      <p>&nbsp;&nbsp; This college might be the college i've studied <strong>Before</strong></p>
+      <!-- Here '&nbsp;' is used for space, how many you give that many spaces  -->
+      <!-- Here the 'Strong' tag is used has in line level for making the text bold and bigger -->
+      <!-- '&' symbol is used for the ading the symbols link-->
+      <abbr title="Indian institure of Technology Delhi"> <a href="https://home.iitd.ac.in/">IITD</a></abbr>
+      <br>
+      <br> This link will take you to my college ,This kind of link is absolute address
+      <!-- This 'abbr' tag will highlites the abbrevation and 'title' is used to know the full form -->
+      <p>This is the example address from the net</p>
+      <!-- The 'address tag identify the addrss and make it look like the using 'em' tag ' -->
+      <figure>
+        <a href="https://www.google.com/maps/place/India+Gate/@28.612912,74.9882988,7z/data=!4m10!1m2!2m1!1sindian+gate!3m6!1s0x390ce2daa9eb4d0b:0x717971125923e5d!8m2!3d28.612912!4d77.2295097!15sCgtpbmRpYW4gZ2F0ZVoNIgtpbmRpYW4gZ2F0ZZIBCG1vbnVtZW504AEA!16zL20vMDM1bWMz?entry=ttu"
+          target="_blank"><img src="img/IndianGate.jpg" alt="Indian Gate jpg" width="320" height="280"
+            title="Want to Visit This place" loading="lazy"></a>
+        <figcaption>
+          This is Indian Gate
+        </figcaption>
+      </figure>
+
+      <!-- Here i used combination of 'a' and 'img' so if image is clicked then it will take you to the respective site -->
+
+      <address>
+        U.S. Embassy New Delhi <br>
+        Shantipath, Chanakyapuri <br>
+        New Delhi - 110021 <br>
+        Phone: 011-91-11-2419-8000 <br>
+        Fax: 011-91-11-2419-0017 <br>
+      </address>
+
+    </article>
+  </main>
   <!-- Use the key 'Ctrl + U' for seeing the source of the html of web page -->
-  <hr />
+  <hr>
   <!-- using 'li' tag which is list  -->
   <!-- and makeing them in 'ol' tag ordered list, without 'ol' all the list have dot at the beginnig.-->
-  <ol>
-    <li>.learing html as soon as possible</li>
-    <li>.making sure every point should be covered</li>
-  </ol>
-  <hr />
   <dl>
     <!-- Here 'dl' tag is description list different from ordered list -->
     <dt>
-      New topic<!-- This 'dt' tag is description term act as side heading for a point -->
+      New topic:
+      <!-- This 'dt' tag is description term act as side heading for a point -->
     </dt>
     <dd>
       About the description topic to the paragram or point wise statements
     </dd>
     <!-- This 'dd' description details tag add details to the above term -->
-    <dt>Day</dt>
+    <dt>Day:</dt>
     <dd>today is monday</dd>
   </dl>
-  <hr />
+  <br>This is my daily routine form morning to night.
+  <article>
+    <h4> schedule Tabel</h4>
+    <table>
+      <!--In 'table' Every data should be in 'tr' tabel row . Every table has thead, tbody, tfooter -->
+      <caption>This is my daily schedule</caption>
+      <thead>
+        <tr>
+          <th>S.no</th>
+          <th>peroid</th>
+          <!-- 'th'  is table header-->
+          <th>work</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1.</td>
+          <td>
+            <!-- 'td' is table data-->
+            Morning to Evening
+          </td>
+          <td>In the College </td>
+        </tr>
+        <tr>
+          <td>2.</td>
+          <td>
+            Evening to MidNight
+          </td>
+          <td>
+            College work + Respective cources
+          </td>
+        </tr>
+        <tr>
+          <td>3.</td>
+          <td>
+            Midnight to Morning
+          </td>
+          <td>
+            Sleep
+          </td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="3">
+            This is what i everyday do in everyday in college life.
+          </td>
+        </tr>
+      </tfoot>
+    </table>
+  </article>
+  <hr>
   <!--  chapte 5 - adding links -->
 
   <!-- link can be added the 'abbr' tag for the acronym with anchor tag 'a' -->
   <!-- anchor tag like this '<a href=""> link_word </a> ' -->
+  <footer>
+    <p>
+      &lt; &lt; &lt; &copy; <strong><a href="about.html">Kalyan</a></strong> &gt; &gt; &gt;
+      <!-- This kind of self page link is relative address -->
 
-  &lt; &lt; &lt; &copy; <strong><a href="about.html">Kalyan</a></strong> &gt; &gt; &gt;
-  <!-- This kind of self page link is relative address -->
-  <p>
-    <a href="#">Back to top</a>
-  </p>
-
+      <a href="#">Back to top</a>
+    </p>
+  </footer>
 
 
 
